<resources>
    <string name="app_name">Comuse_Kotlin</string>
    <string name="members">Members</string>
    <string name="timetable">TimeTable</string>
    <string name="settings">Settings</string>
    <string name="in">in</string>
    <string name="out">out</string>
    <string-array name="timetable_day">
        <item></item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
        <item>SUN</item>
    </string-array>
    <string-array name="spinner_day">
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
        <item>SUN</item>
    </string-array>
    <string name="end">end</string>
    <string name="start">start</string>
    <string name="title">title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_info">Login Info</string>
    <string name="sign_in">sign In</string>
    <string name="position">position</string>
    <string name="edit">edit</string>
</resources>
