<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userData"
            type="com.example.comuse_kotlin.dataModel.Member" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="fragment.SettingsFragment">


        <!-- TODO: Update blank fragment layout -->
        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivities.SettingsActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/settings"
                    android:textColor="#000000"
                    android:textSize="36sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0"
                    android:padding="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:contentPadding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="332dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="15"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView14"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:text="@string/login_info"
                                android:textColor="#000000"
                                android:textSize="26sp" />

                            <TextView
                                android:id="@+id/mypage_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="30dp"
                                android:paddingEnd="30dp"
                                android:textSize="20sp"
                                android:text="@{userData.name}"/>

                            <TextView
                                android:id="@+id/mypage_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:paddingStart="50dp"
                                android:paddingEnd="50dp"
                                android:text="@{userData.email}"/>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/button_sign_inout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingStart="0dp"
                            android:paddingEnd="10dp"
                            android:text="@string/sign_in"
                            android:textColor="#2196F3"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0"
                    android:paddingTop="50dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:contentPadding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:text="@string/position"
                            android:textColor="#000000"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/position_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="9"
                            android:textSize="20sp"
                            android:text="@{userData.position}"/>

                        <TextView
                            android:id="@+id/button_position_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingStart="0dp"
                            android:paddingEnd="10dp"
                            android:text="@string/edit"
                            android:textColor="#2196F3"
                            android:textSize="18sp"
                            android:visibility="visible" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>