<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="scheduleData"
            type="com.example.comuse_kotlin.dataModel.ScheduleData" />
    </data>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:paddingLeft="30dp"
                android:text="Day"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="254dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/start_textView"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="0dp"
                android:paddingBottom="15dp"
                android:text="@string/start"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TimePicker
                android:id="@+id/time_picker_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:timePickerMode="spinner">

            </TimePicker>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/end_textView"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="0dp"
                android:text="@string/end"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TimePicker
                android:id="@+id/time_picker_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:timePickerMode="spinner">

            </TimePicker>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="100dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:text = "@{scheduleData.classTitle}"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editTime_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="취소"
                android:textColor="#03A9F4"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/editTime_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="확인"
                android:textColor="#03A9F4"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>
</layout>